--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "scroll-carousel-react": "^1.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
